--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
 aiohttp==3.7.3
-requests==2.25.0
+aiohttp-debugtoolbar==0.6.0
+aiohttp-jinja2==1.4.2
+async-timeout==3.0.1
+attrs==20.3.0
+certifi==2020.11.8
+chardet==3.0.4
+idna==2.10
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+multidict==5.0.2
+pkg-resources==0.0.0
 PyYAML==5.3.1
+requests==2.25.0
+typing-extensions==3.7.4.3
+urllib3==1.26.2
+yarl==1.6.3
